<resources>
    <string name="app_name">Helping Hands</string>
    <string name="Pick">Pick Item</string>
    <string name="Drop">Drop Item</string>
    <string name="title_activity_drop">drop</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_signup_short">SignUp or Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error">not correct</string>
    <string name="goBack">goBack</string>
    <string name="blank"> </string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="otp_input">Write 6 digit OTP</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="ex_mystrongpassword">Ex:MyStrongPassword</string>
    <string name="signup1">SignUp</string>
    <string name="Name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mobile_no">Friend Mobile</string>
    <string name="next">Next</string>
    <string name="samplepin">12345</string>
    <string name="sigin">Signin</string>
    <string name="FriendName">Friend Name</string>
    <string name="FriendName_edit">Nimesh</string>
    <string name="mobile_edit">8888888888</string>

    <string name="title_activity_dashboard">dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="Category">Category</string>
    <string name="Location">Location</string>
    <string name="Quantity">Quantity</string>
    <string name="Description">Description</string>

</resources>
