<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ga.rdxgeek.droppick.DetailActivity">

    <Button
        android:id="@+id/BT_Checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="99dp"
        android:layout_marginEnd="68dp"
        android:text="Checkout" />

    <Button
        android:id="@+id/BT_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/BT_Checkout"
        android:layout_marginStart="59dp"
        android:text="Cancel" />

    <TextView
        android:id="@+id/TV_D1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/BT_Cancel"
        android:text="@string/Name" />

    <TextView
        android:id="@+id/TV_D2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/TV_D1"
        android:layout_below="@+id/TV_D1"
        android:layout_marginTop="35dp"
        android:text="@string/Description" />

    <TextView
        android:id="@+id/TV_D3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/TV_D2"
        android:layout_below="@+id/TV_D2"
        android:layout_marginTop="35dp"
        android:text="@string/Category" />

    <TextView
        android:id="@+id/TV_D4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/TV_D3"
        android:layout_below="@+id/TV_D3"
        android:layout_marginTop="46dp"
        android:text="@string/Location" />

    <TextView
        android:id="@+id/TV_D5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/TV_D4"
        android:layout_centerVertical="true"
        android:text="@string/Quantity" />

</RelativeLayout>
