<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_signup"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="ga.rdxgeek.droppick.drop">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/Drop"
    android:textSize="@dimen/head"
    android:id="@+id/DropTitle"
    android:textColor="@color/black"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_marginTop="@dimen/diff"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/Name"
    android:id="@+id/name_display"
    android:textSize="25dp"
    android:minHeight="25dp"
    android:maxHeight="45dp"
    android:layout_below="@+id/DropTitle"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_toLeftOf="@+id/name_input"/>

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/name_input"
    android:layout_marginTop="@dimen/diff"
    android:textSize="25sp"
    android:minWidth="200dp"
    android:minLines="1"
    android:minHeight="25dp"
    android:maxWidth="25dp"
    android:maxHeight="35dp"
    android:inputType="textPersonName"
    android:text="shreyan mehta"
    android:layout_alignBaseline="@+id/name_display"
    android:layout_alignBottom="@+id/name_display"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/email"
    android:textSize="25sp"
    android:id="@+id/email_display"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/name_display"
    android:layout_alignParentLeft="true"
    android:layout_toLeftOf="@+id/email_signup"
    android:layout_alignBaseline="@+id/email_signup"
    android:layout_alignBottom="@+id/email_signup" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="25sp"
    android:minWidth="200dp"
    android:minLines="1"
    android:minHeight="25dp"
    android:maxWidth="25dp"
    android:maxHeight="35dp"
    android:inputType="textEmailAddress"
    android:id="@+id/email_signup"
    android:text="xyz@gmail.com"
    android:layout_below="@+id/name_input"
    android:layout_alignParentEnd="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/password"
    android:textSize="25sp"
    android:id="@+id/password_display"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/email_display"
    android:layout_toLeftOf="@+id/password_signup"
    android:layout_alignBaseline="@+id/password_signup"
    android:layout_alignBottom="@+id/password_signup" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/password_signup"
    android:textSize="25sp"
    android:minWidth="200dp"
    android:minLines="1"
    android:minHeight="25dp"
    android:maxWidth="25dp"
    android:maxHeight="35dp"
    android:inputType="textPassword"
    android:password="true"
    android:text="password"
    android:layout_centerVertical="true"
    android:layout_alignStart="@+id/email_signup"
    android:layout_alignLeft="@+id/email_signup"
    android:layout_below="@+id/email_signup" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/FriendName"
    android:textSize="25sp"
    android:id="@+id/Fname"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/password_display"
    android:layout_alignParentLeft="true"
    android:layout_toLeftOf="@+id/Fname_edit"
    android:layout_alignBaseline="@+id/Fname_edit"
    android:layout_alignBottom="@+id/Fname_edit" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="25sp"
    android:minWidth="200dp"
    android:minLines="1"
    android:minHeight="25dp"
    android:maxWidth="25dp"
    android:maxHeight="35dp"
    android:inputType="textPersonName"
    android:id="@+id/Fname_edit"
    android:text="@string/FriendName_edit"
    android:layout_below="@+id/password_signup"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/mobile_no"
    android:textSize="25sp"
    android:id="@+id/mobile"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/password_display"
    android:layout_alignParentLeft="true"
    android:layout_toLeftOf="@+id/mobile_edit"
    android:layout_alignBaseline="@+id/mobile_edit"
    android:layout_alignBottom="@+id/mobile_edit" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="25sp"
    android:minWidth="200dp"
    android:minLines="1"
    android:minHeight="25dp"
    android:maxWidth="25dp"
    android:maxHeight="35dp"
    android:inputType="number"
    android:id="@+id/mobile_edit"
    android:text="@string/mobile_edit"
    android:layout_below="@+id/Fname_edit"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />


<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/next"
    android:id="@+id/next"
    android:clickable="true"
    android:layout_marginBottom="26dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true" />




</RelativeLayout>

