<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_signup"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="ga.rdxgeek.droppick.drop">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="Drop an Item"
    android:textSize="@dimen/head"
    android:id="@+id/label_drop"
    android:textColor="@color/black"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/Category"
    android:textSize="25sp"
    android:id="@+id/category_label"
        android:layout_alignTop="@+id/ET_category"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/ET_category" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/Quantity"
    android:textSize="25sp"
    android:id="@+id/quantity_label"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/desc_label"
    android:layout_alignParentLeft="true"
    android:layout_toLeftOf="@+id/ET_quantity"
    android:layout_alignBaseline="@+id/ET_quantity"
    android:layout_alignBottom="@+id/ET_quantity" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Location"
        android:textSize="25sp"
        android:id="@+id/location_label"
        android:layout_alignBaseline="@+id/ET_location"
        android:layout_alignBottom="@+id/ET_location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:minWidth="200dp"
        android:minLines="1"
        android:minHeight="25dp"
        android:maxWidth="25dp"
        android:maxHeight="35dp"
        android:inputType="number"
        android:id="@+id/ET_quantity"
        android:text="1"
        android:layout_above="@+id/BTN_back"
        android:layout_alignStart="@+id/ET_location"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="13dp" />

    <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="25sp"
    android:minWidth="200dp"
    android:minLines="1"
    android:minHeight="25dp"
    android:maxWidth="25dp"
    android:maxHeight="35dp"
    android:inputType="text"
    android:id="@+id/ET_location"
        android:text="Rack number"
        android:layout_below="@+id/desc_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:minWidth="200dp"
        android:minLines="1"
        android:minHeight="25dp"
        android:maxWidth="25dp"
        android:maxHeight="35dp"
        android:inputType="text"
        android:id="@+id/ET_category"
        android:text="Enter Category"
        android:layout_below="@+id/ET_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp" />

    <EditText
        android:id="@+id/ET_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ET_category"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:maxHeight="35dp"
        android:maxWidth="25dp"
        android:minHeight="25dp"
        android:minLines="1"
        android:minWidth="200dp"
        android:password="false"
        android:singleLine="false"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Name"
        android:id="@+id/name_label"
        android:textSize="25dp"
        android:minHeight="25dp"
        android:maxHeight="45dp"
        android:layout_alignBaseline="@+id/ET_name"
        android:layout_alignBottom="@+id/ET_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ET_name"
        android:textSize="25sp"
        android:minWidth="200dp"
        android:minLines="1"
        android:minHeight="25dp"
        android:maxWidth="25dp"
        android:maxHeight="35dp"
        android:inputType="textPersonName"
        android:text="Enter item name"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/label_drop"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/Description"
    android:textSize="25sp"
    android:id="@+id/desc_label"
        android:layout_alignBottom="@+id/ET_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/ET_description" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:id="@+id/BT_submitdrop"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/ET_quantity"
        android:layout_toStartOf="@+id/ET_quantity" />

    <Button
        android:text="Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/BT_submitdrop"
        android:layout_toRightOf="@+id/BT_submitdrop"
        android:layout_toEndOf="@+id/BT_submitdrop"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:id="@+id/BTN_back" />


</RelativeLayout>

